# SPDE_hackathon

./: .gitignore  README.md  generate_prediction_files.py  generate_sig_w1_test_data.py  phi41_evaluation.py  pyproject.toml  requirements.txt  run_evaluation.py
data_gen/configs/: KPZ.yaml  KdV.yaml  NS.yaml  ginzburg_landau.yaml  navier_stokes.yaml  phi41.yaml  phi42.yaml  phi43.yaml  wave.yaml
data_gen/data/: data_generation_ginzburg_landau.ipynb  data_generation_kdv.ipynb  generator_navier_stokes.ipynb
data_gen/examples/: README.md  gen_KPZ.py  gen_KdV.py  gen_KdV_refine.py  gen_ginzburg_landau.py  gen_navier_stokes.py  gen_phi41.py  gen_phi42.py  gen_phi43.py  gen_wave.py
data_gen/src/: Noise.py  NoiseND.py  Noise_Haar.py  SPDEs.py  SPDEs2D.py  SPDEs3D.py  general_solver.py  generator_sns.py  random_forcing.py
evaluations/: __init__.py  metrics.py  plot.py  statistics.py
model/: utilities.py
model/DLR/: Graph.py  RSlayer_2d.py  SPDEs.py  train1d.py  train1d_wb.py  train2d.py  train2d_wb.py  utils.py  utils2d.py
model/DeepONet/: deepOnet.py  deepOnet1.py  deepOnet2D.py  test.py  train.py  train1d.py  train2d.py  train_sweep.py  train_wb.py
model/FNO/: FNO1D.py  FNO2D.py  FNO3D.py  eval2d.py  eval3d.py  test_data.py  train.py  train1d.py  train1d_wb.py  train2d.py  train2d_wandb_sweep.py  train2d_wandb_train.py  train3d.py
model/GalerkinTransformer/: galerkin_transformer.py  train1d.py  train2d.py
predictions/: sigw1_large_drift.pt  sigw1_same.pt  sigw1_small_drift.pt
tests/: test_noise_nd.py  test_phi43_3d.py  test_phi43_3d_stats.py  test_spde_smoke.py
(+88 files in other folders)
