[project]
name = "spde-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "torch>=2.1,<2.4",
    "numpy",
    "scipy",
    "hydra-core",
    "omegaconf",
    "torchcde==0.2.5",
    "iisignature",
    "scikit-learn",
    "tqdm",
    "pandas",
    "matplotlib",
    "h5py",
    "pytorch-wavelets",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.extra-build-dependencies]
iisignature = ["numpy"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
